<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Top main section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_45sdp">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/location"
            android:textColor="@color/white"
            android:textSize="@dimen/_25ssp"
            android:fontFamily="@font/noto_sans"/>

        <TextView
            android:id="@+id/updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_at"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/noto_sans"/>

        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            tools:text="@string/degree_value"
            android:textColor="@color/white"
            android:textSize="@dimen/_100ssp"
            android:fontFamily="@font/noto_sans"/>

    </LinearLayout>

    <!-- Bottom section -->
    <LinearLayout
        android:id="@+id/bottom_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:padding="@dimen/_15sdp"
        android:orientation="vertical"

        android:background="@drawable/bottom_section_bg">

        <!-- First row sunrise info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Item row sunrise info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sunrise_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/noto_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/noto_sans"/>
            </LinearLayout>

            <!-- Item row sunset info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sunset_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/noto_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/noto_sans"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <!-- Second row sunrise info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Item row wind info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/wind_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/noto_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/noto_sans"/>
            </LinearLayout>

            <!-- Item row humidity info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/humidity_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/noto_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/noto_sans"/>
            </LinearLayout>

            <!-- Item row pressure info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/pressure_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/noto_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/noto_sans"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Error section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"/>
        <TextView
            android:text="@string/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_17ssp"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/white"
            android:paddingTop="@dimen/_7sdp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>